--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -2,8 +2,8 @@
  *
  * CSS written based on SMACSS architecture.
  * To learn more, visit: http://smacss.com/
- * 
- * For simplicity, no reset or normalize is added. 
+ *
+ * For simplicity, no reset or normalize is added.
  * To learn more, visit: https://css-tricks.com/reboot-resets-reasoning/
  *
 */
@@ -82,6 +82,10 @@ section {
     color: #000;
 }
 
+.navbar__menu .menu__link.current {
+    background-color: #cc1;
+}
+
 .navbar__menu .menu__link:hover {
     background: #333;
     color: #fff;
@@ -126,7 +130,7 @@ section {
 section:nth-of-type(even) .landing__container {
     margin-right: 0;
     margin-left: auto;
-    text-align: right; 
+    text-align: right;
 }
 
 /* Background Circles */
@@ -217,7 +221,7 @@ section.your-active-class .landing__container::after {
 	}
 	to {
 		transform: rotate(360deg)
-		           translate(-1em) 
+		           translate(-1em)
 		           rotate(-360deg);
 	}
 }
